--- a/src/App.css
+++ b/src/App.css
@@ -5,7 +5,6 @@
   width: 400px;
 }
 
-
 form {
   display: block;
 }
@@ -13,4 +12,8 @@ form {
 form button {
   display: block;
   margin: 10px auto;
+}
+
+.form-group {
+  margin: 5px auto;
 }
